--- a/api/package.json
+++ b/api/package.json
@@ -31,6 +31,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "D": "^1.0.0",
+    "google-auth-library": "^9.11.0",
     "ioredis": "^5.4.1",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.0",
